# mcp-server-suite

./: README.md  pyproject.toml  web_search_tavily.py
database/postgresql/: async_postgressql_server.py  sync_postgressql_server.py
file explore/: basic_file_server.py
web search/: web_serach_sse.py
