[project]
name = "my-mcp-servers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "mcp[tool]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "psycopg2>=2.9.10",
    "python-dotenv>=1.1.0",
    "tavily-python>=0.6.0",
]
